# num_enum

./: .travis.yml  Cargo.lock.msrv  Cargo.toml  README.md
.github/workflows/: features.yml  metadata.yml  minimal-versions.yml  msrv-build.yml  presubmit.yml
metadata_checks/: Cargo.toml
metadata_checks/tests/: metadata_checks.rs
nightly_tests/: Cargo.toml
nightly_tests/src/: lib.rs
num_enum/: Cargo.toml
num_enum/src/: lib.rs
num_enum/tests/: complex.rs  const_default.rs  const_from_primitive.rs  const_into_primitive.rs  const_try_from_primitive.rs  from_primitive.rs  into_primitive.rs  lib.rs  num_enum_reexport.rs  renamed_num_enum.rs  try_build.rs  try_from_primitive.rs  unsafe_from_primitive.rs
num_enum/tests/try_build/compile_fail/: bad_crate_path.rs  bad_crate_path.stderr  conflicting_default.stderr  conflicting_derive.stderr  conflicting_derive.stderr_beta  conflicting_derive.stderr_nightly  exhaustive_enum.stderr  garbage_attribute.stderr  garbage_attributes.stderr  missing_default.stderr  missing_repr.stderr  multiple_crate_path.rs  multiple_crate_path.stderr  multiple_defaults.stderr  unreachable_patterns.stderr  unreachable_patterns.stderr_beta  variants_with_fields.stderr  variants_with_fields.stderr_nightly
num_enum/tests/try_build/nightly/compile_fail/: catch_all_multiple_fields.rs  catch_all_multiple_fields.stderr  catch_all_non_tuple.rs  catch_all_non_tuple.stderr  catch_all_type_mismatch.rs  catch_all_type_mismatch.stderr  conflicting_default.rs  conflicting_default.stderr  default_and_catch_all.rs  default_and_catch_all.stderr  default_and_catch_all_alt.rs  default_and_catch_all_alt.stderr  default_and_catch_all_same_variant.rs  default_and_catch_all_same_variant.stderr  default_and_catch_all_same_variant_alt.rs  default_and_catch_all_same_variant_alt.stderr  multiple_catch_all.rs  multiple_catch_all.stderr  multiple_catch_all_same_variant.rs  multiple_catch_all_same_variant.stderr
num_enum/tests/try_build/not_nightly/compile_fail/: garbage_attribute.stderr
num_enum/tests/try_build/pass/: exhaustive_enum.rs
num_enum_derive/: Cargo.toml
num_enum_derive/src/: enum_attributes.rs  lib.rs  parsing.rs
renamed_num_enum/: Cargo.toml
renamed_num_enum/src/: lib.rs  main.rs
serde_example/: Cargo.toml
serde_example/src/: lib.rs
src/: lib.rs
src/proc_macro/: Cargo.toml  mod.rs
stable_tests/: Cargo.toml
stable_tests/src/: lib.rs
stress_tests/: Cargo.toml
stress_tests/tests/: stress_test.rs
stress_tests/tests/stress_tests/: full_u16.rs
tests/: Cargo.toml  lib.rs  renamed_num_enum.rs
tests/renamed_num_enum/: Cargo.toml
tests/renamed_num_enum/src/: main.rs
tests/src/: lib.rs
