[package]
name = "num_enum"
version = "0.2.0"
authors = ["Daniel Wagner-Hall <dawagner@gmail.com>"]
description = "Procedural macros to make inter-operation between primitives and enums easier."
edition = "2018"
repository = "https://github.com/illicitonion/num_enum"
readme = "README.md"
keywords = ["enum"]
categories = ["rust-patterns"]
license = "BSD-3-Clause"

[lib]
proc-macro = true

[features]
complex-expressions = ["syn/full"]

[badges]
travis-ci = { repository = "illicitonion/num_enum", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
proc-macro2 = "0.4.27"
quote = "0.6.12"
syn = "0.15.32"
