[package]
name = "num_enum"
version = "0.3.1"  # keep in sync with dependencies.proc_macro
authors = ["Daniel Wagner-Hall <dawagner@gmail.com>"]
description = "Procedural macros to make inter-operation between primitives and enums easier."
edition = "2018"
repository = "https://github.com/illicitonion/num_enum"
readme = "README.md"
keywords = ["enum", "conversion", "safe", "ffi", "derive"]
categories = ["rust-patterns"]
license = "BSD-3-Clause"

[features]
std = ["proc_macro/std", ]
complex-expressions = ["proc_macro/complex-expressions", ]
external_doc = []

default = ["std"]  # disable to use in a `no_std` environment

[package.metadata.docs.rs]
features = ["external_doc"]

[badges]
travis-ci = { repository = "illicitonion/num_enum", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
derivative = { version = "1.0.2", features = ["use_core"] }

[dependencies.proc_macro]
version = "0.3.1"  # keep in sync with src/proc_macro/Cargo.toml
package = "num_enum-proc-macro"
path = "src/proc_macro"
