[package]
name = "num_enum_derive"
version = "0.4.1"  # Keep in sync with num_enum.
authors = [
  "Daniel Wagner-Hall <dawagner@gmail.com>",
  "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
description = "Internal implementation details for ::num_enum (Procedural macros to make inter-operation between primitives and enums easier)"
edition = "2018"
repository = "https://github.com/illicitonion/num_enum"
keywords = []
categories = []
license = "BSD-3-Clause"

[lib]
proc-macro = true

[features]
std = []
complex-expressions = ["syn/full"]
external_doc = []

default = ["std"]  # disable to use in a `no_std` environment

[package.metadata.docs.rs]
features = ["external_doc"]

[dependencies]
proc-macro2 = "0.4.30"
proc-macro-crate = "0.1.4"
proc-quote = "0.2.2"
syn = "0.15.44"
